Changed blag link to new domain. Fixed a bug where copying the contact info would cause the screen to flicker on mobile Safari.

--- a/app/styles/default/_contact-info.scss
+++ b/app/styles/default/_contact-info.scss
@@ -1,7 +1,7 @@
 /* Contact Info in Card */
 #contact-info {
 	width: $box-width;
-	height: auto;
+	height: 25px;
 	
 	margin: 0px auto;
 	z-index: 100;
